config/prow/cluster/deck-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deck
  name: deck
  namespace: default
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deck
  template:
    metadata:
      labels:
        app: deck
    spec:
      serviceAccountName: deck
      terminationGracePeriodSeconds: 30
      containers:
      - name: deck
        image: gcr.io/k8s-prow/deck:v20200423-af610499d
        imagePullPolicy: IfNotPresent # Always
        ports:
          - name: http
            containerPort: 8080
        args:
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        - --tide-url=http://tide/
        - --hook-url=http://hook:8888/plugin-help
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /etc/job-config
          name: config
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
