config/prow/cluster/secretrotator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: secret-rotator
  labels:
    app: secret-rotator
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: secret-rotator
  template:
    metadata:
      labels:
        app: secret-rotator
    spec:
      serviceAccountName: ks8-gsm-tools
      terminationGracePeriodSeconds: 30
      containers:
      - name: secret-rotator
        image: gcr.io/k8s-staging-k8s-gsm-tools/secret-rotator:latest
        args:
        - --config-path=/tmp/config/rotConfig 
        - --period=1000
        - --v=2
        volumeMounts:
        - name: config-volume
          readOnly: true
          mountPath: /tmp/config
      volumes:
      - name: config-volume
        configMap:
          name: config
