config/prow/cluster/secretsynccontroller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: secret-sync-controller
  labels:
    app: secret-sync-controller
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: secret-sync-controller
  template:
    metadata:
      labels:
        app: secret-sync-controller
    spec:
      serviceAccountName: ks8-gsm-tools
      terminationGracePeriodSeconds: 30
      containers:
      - name: secret-sync-controller
        image: gcr.io/k8s-staging-k8s-gsm-tools/secret-sync-controller:latest
        args:
        - --config-path=/tmp/config/syncConfig 
        - --period=1000
        - --v=2
        volumeMounts:
        - name: config-volume
          readOnly: true
          mountPath: /tmp/config
      volumes:
      - name: config-volume
        configMap:
          name: config
