config/prow/cluster/sinker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: sinker
  labels:
    app: sinker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sinker
  template:
    metadata:
      labels:
        app: sinker
    spec:
      serviceAccountName: sinker
      containers:
      - name: sinker
        image: gcr.io/k8s-prow/sinker:v20200423-af610499d
        imagePullPolicy: IfNotPresent
        args:
        - --config-path=/etc/config/config.yaml
        - --dry-run=false
        - --job-config-path=/etc/job-config
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
