config/prow/cluster/deck-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deck
  namespace: default
spec:
  clusterIP: 10.63.252.93
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31331
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: deck
  sessionAffinity: None
  type: NodePort
