config/prow/cluster/hook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hook
  namespace: default
  name: hook
spec:
  selector:
    app: hook
  ports:
  - name: main
    port: 8888
  - name: metrics
    port: 9090
  type: NodePort
