config/prow/cluster/tide-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tide
  namespace: default
  name: tide
spec:
  selector:
    app: tide
  ports:
  - name: main
    port: 80
    targetPort: 8888
  - name: metrics
    port: 9090
  type: ClusterIP
